# PiratesSimulation

./: .gitignore  BedDistributor.cpp  BedDistributor.h  CMakeLists.txt  Cannon.cpp  Cannon.h  Cannonball.cpp  Cannonball.h  Crew.cpp  Crew.h  Mast.cpp  Mast.h  MastDistributor.cpp  MastDistributor.h  Monitor.cpp  Monitor.h  NcursesUtil.cpp  NcursesUtil.h  Operable.h  Pos.cpp  Pos.h  README.md  Sailor.cpp  Sailor.h  Ship.cpp  Ship.h  ShipBody.cpp  ShipBody.h  ShipController.cpp  ShipController.h  ShipLayout.cpp  ShipLayout.h  ShipObject.cpp  ShipObject.h  ShipObjectIdGenerator.cpp  ShipObjectIdGenerator.h  Stairs.cpp  Stairs.h  Stopable.cpp  Stopable.h  (+13 more)
Ship/: Cannon.cpp  Cannon.h  Cannonball.cpp  Cannonball.h  Crew.cpp  Crew.h  Mast.cpp  Mast.h  MastDistributor.cpp  MastDistributor.h  Sailor.cpp  Sailor.h  Ship.cpp  Ship.h  ShipBody.cpp  ShipBody.h  ShipController.cpp  ShipController.h  ShipLayout.cpp  ShipLayout.h  ShipState.h
Util/: NcursesUtil.cpp  NcursesUtil.h  Rect.cpp  Rect.h  Util.cpp  Util.h  Vec2.cpp  Vec2f.cpp  Vec2f.h  Vec2i.cpp  Vec2i.h
